test/conformance/chainsaw/mutate/policy/standard/existing/validation/auth-check/01-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-mutate-existing-auth-check-ns
