test/conformance/chainsaw/mutate/policy/standard/existing/validation/auth-check/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pol-mutate-existing-auth-check-ns
