test/conformance/chainsaw/mutate/policy/standard/existing/validation/auth-check/02-fail-no-permission.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: fail-no-permission
spec:
  timeouts: {}
  try:
  - apply:
      expect:
      - check:
          ($error != null): true
      file: policy.yaml
