test/conformance/chainsaw/mutate/policy/standard/existing/validation/auth-check/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auth-check
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-mutate-existing-auth-check
        - name: namespace
          value: pol-mutate-existing-auth-check-ns
